# models/response.go
@@ -11,6 +11,7 @@ type LoginRequest struct {
 
 type RegisterRequest struct {
 	Email    string `json:"email" validate:"required,email"`
+	Username string `json:"username" validate:"required,min=3,max=32"`
 	Password string `json:"password" validate:"required,min=6"`
 }
 
